--- a/plugins/bom/pom.xml
+++ b/plugins/bom/pom.xml
@@ -122,11 +122,8 @@
                 <artifactId>commons-httpclient</artifactId>
                 <version>3.1</version>
             </dependency>
-            <dependency>
-                <groupId>org.apache.httpcomponents.client5</groupId>
-                <artifactId>httpclient5</artifactId>
-                <version>5.1.3</version>
-            </dependency>
+
+
 
             <dependency>
                 <groupId>com.google.http-client</groupId>
@@ -276,7 +273,7 @@
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>dubbo</artifactId>
-                <version>${alibaba.dubbo.version}</version>
+                <version>${dubbo.version}</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.springframework</groupId>
